ACLOCAL_AMFLAGS = -I m4 --install
dist_doc_DATA = README README.tests README.engine COPYING
SUBDIRS = $(ENABLED_SUBDIRS)

include_HEADERS = \
	lib/pka.h \
	lib/pka_dev.h \
	lib/pka_mem.h \
	lib/pka_ring.h \
	lib/pka_queue.h \
	include/pka_addrs.h \
	include/pka_atomic.h \
	include/pka_barrier.h \
	include/pka_common.h \
	include/pka_config.h \
	include/pka_cpu.h \
	include/pka_debug.h \
	include/pka_firmware.h \
	include/pka_ioctl.h \
	include/pka_mmio.h \
	include/pka_types.h \
	include/pka_utils.h
